# setools-android

./: .gitignore  AUTHORS  Android.mk  COPYING  ChangeLog  Makefile.am  README.md  build.sh  configure.ac
jni/: Android.mk  Application.mk
jni/include/: config.h
jni/libapol/: Android.mk  getline.h  util.c
jni/libqpol/: avrule_query.c  genfscon_query.c  glob.c  glob.h  policy_define.c  policy_extend.c  syn_rule_query.c  util.c
jni/libsepol/: Android.mk
jni/libsepol/include/sepol/policydb/: policydb.h
jni/libsepol/src/: expand.c  genbools.c  genusers.c  policydb.c  services.c  write.c
jni/sepolicy-inject/: Makefile  sepolicy-inject.c  tokenize.c
libapol/: getline.c  policy-path.c  render.c
libqpol/: Android.mk  ftrule_query.c  mlsrule_query.c  policy_define.c
libsepol/src/: expand.c  link.c
